# g4xcf

./: CMakeLists.txt  README.md  setup_geant4.sh  test.sh
app/: CMakeLists.txt  main.cpp
cfg/: CMakeLists.txt
macros/: gps_test.mac  xray.mac
source/: AnalysisManager.cpp  AnalysisManager.h  CMakeLists.txt  DetectorConstruction.cpp  DetectorConstruction.h  EventAction.cpp  EventAction.h  GeneratorParticle.cpp  GeneratorParticle.h  Hit.cpp  Hit.h  MCParticle.cpp  MCParticle.h  MCTruthManager.cpp  MCTruthManager.h  PrimaryGeneration.cpp  PrimaryGeneration.h  RunAction.cpp  RunAction.h  SensitiveDetector.cpp  SensitiveDetector.h  SteppingAction.cpp  SteppingAction.h  TrackingAction.cpp  TrackingAction.h  geo_types.h
