## ---------------------------------------------------------
##  g4xcf | cfg/CMakeLists.txt
##
##  CMake build script.
##   * Author: Everyone is an author!
##   * Creation date: 14 May 2023
## ---------------------------------------------------------

install(FILES init_vis.mac vis.mac DESTINATION bin)
